--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     }
   ],
   "require": {
-    "php"            : ">=5.3",
+    "php"                            : ">=5.3",
+    "g4/config"                      : "0.1.3",
     "ruckusing/ruckusing-migrations" : "1.1.*"
   }
 }
