Added author to composer.json

--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,10 @@
     {
       "name": "Ivan Krickovic",
       "email": "ivan.krickovic@gmail.com"
+    },
+    {
+      "name": "Petar Pavlovic",
+      "email": "pavlovicpetar@gmail.com"
     }
   ],
   "require": {
