--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,8 @@
     }
   ],
   "require": {
-    "php"                            : ">=5.3",
+    "php"                            : ">=5.4",
     "g4/config"                      : "0.1.3",
-    "ruckusing/ruckusing-migrations" : "1.1.*"
+    "g4/ruckusing-migrations"        : "1.2.*"
   }
 }
