--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
   ],
   "require": {
     "php"                            : ">=5.4",
-    "g4/config"                      : "0.1.3",
+    "g4/config"                      : "0.*",
     "g4/ruckusing-migrations"        : "1.2.*"
   }
 }
