--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,8 @@
     }
   ],
   "require": {
-    "php"                            : ">=5.4",
-    "g4/config"                      : "0.*",
+    "php"                            : ">=7.3",
+    "g4/config"                      : ">=1.0.0",
     "g4/ruckusing-migrations"        : "1.2.*"
   }
 }
